Replace use of deprecated Class.newInstance()